After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 616175 - gnome-keyring-daemon assert failure: gnome-keyring-daemon: egg-secure-memory.c:240: pool_free: Assertion `pool && *at' failed.
gnome-keyring-daemon assert failure: gnome-keyring-daemon: egg-secure-memory....
Status: RESOLVED FIXED
Product: gnome-keyring
Classification: Core
Component: general
2.30.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2010-04-19 13:30 UTC by Sebastien Bacher
Modified: 2010-09-11 23:41 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastien Bacher 2010-04-19 13:30:20 UTC
The bug has been opened on https://bugs.launchpad.net/ubuntu/+source/gnome-keyring/+bug/556759

"I've connected to a server using Dolphin and the gnome-keyring dialog popped up asking for the passphrase.
I've entered it wrongly the first time (probably) and have been asked again.
Then the program apparently crashed and a KDE based dialog came up instead, asking for the key's passphrase."

gnome-keyring 2.30.0

"#0  0x00dda422 in __kernel_vsyscall ()
No symbol table info available.
  • #1 *__GI_raise
    at ../nptl/sysdeps/unix/sysv/linux/raise.c line 64
  • #2 *__GI_abort
    at abort.c line 92
  • #3 *__GI___assert_fail
    at assert.c line 81
  • #4 pool_free
    at egg-secure-memory.c line 240
  • #5 sec_block_destroy
    at egg-secure-memory.c line 926
  • #6 egg_secure_free_full
    at egg-secure-memory.c line 1118
  • #7 egg_secure_realloc_full
    at egg-secure-memory.c line 1020
  • #8 egg_secure_realloc
    at egg-secure-memory.c line 999
  • #9 egg_buffer_uninit
    at egg-buffer.c line 111
  • #10 run_client_thread
    at gkd-ssh-agent.c line 179
  • #11 ??
    from /lib/libglib-2.0.so.0

Comment 1 Stef Walter 2010-09-11 23:41:54 UTC
Thanks for filing this ticket. I believe this patch should fix the problem:

commit 53391e4f569f1a3d8e4fb47502b480bc50e7e131
Author: Stef Walter <stef@memberwebs.com>
Date:   Sat Sep 11 23:38:46 2010 +0000

[egg] Fix secure memory assertion.

Fix assertion that occurs when searching for pool to free memory from.

https://bugzilla.gnome.org/show_bug.cgi?id=616175

Same code exists in libgnome-keyring egg/ directory, also fixed there.