[egg] Fix secure memory assertion.

Fix assertion that occurs when searching for pool to free memory from.

https://bugzilla.gnome.org/show_bug.cgi?id=616175